parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> print_stmt
Rule 5     statement -> assign_stmt
Rule 6     statement -> if_stmt
Rule 7     statement -> while_stmt
Rule 8     statement -> for_stmt
Rule 9     statement -> function_def
Rule 10    statement -> return_stmt
Rule 11    statement -> break_stmt
Rule 12    statement -> continue_stmt
Rule 13    statement -> try_except_stmt
Rule 14    statement -> NEWLINE
Rule 15    print_stmt -> PRINT LPAREN expr RPAREN
Rule 16    print_stmt -> PRINT expr
Rule 17    assign_stmt -> IDENTIFIER EQUALS expr
Rule 18    assign_stmt -> IDENTIFIER LBRACKET expr RBRACKET EQUALS expr
Rule 19    if_stmt -> IF expr COLON statements
Rule 20    if_stmt -> IF expr COLON statements ELSE COLON statements
Rule 21    while_stmt -> WHILE expr COLON statements
Rule 22    for_stmt -> FOR IDENTIFIER IN expr COLON statements
Rule 23    function_def -> DEF IDENTIFIER LPAREN param_list RPAREN COLON statements
Rule 24    param_list -> IDENTIFIER
Rule 25    param_list -> param_list COMMA IDENTIFIER
Rule 26    param_list -> empty
Rule 27    return_stmt -> RETURN expr
Rule 28    return_stmt -> RETURN
Rule 29    break_stmt -> BREAK
Rule 30    continue_stmt -> CONTINUE
Rule 31    try_except_stmt -> TRY COLON statements EXCEPT COLON statements
Rule 32    expr -> term
Rule 33    expr -> expr PLUS term
Rule 34    expr -> expr MINUS term
Rule 35    expr -> expr TIMES term
Rule 36    expr -> expr DIVIDE term
Rule 37    expr -> expr MODULO term
Rule 38    expr -> expr GT term
Rule 39    expr -> expr LT term
Rule 40    expr -> expr GE term
Rule 41    expr -> expr LE term
Rule 42    expr -> expr EQ term
Rule 43    expr -> expr NE term
Rule 44    expr -> expr AND term
Rule 45    expr -> expr OR term
Rule 46    term -> factor
Rule 47    term -> NOT term
Rule 48    term -> MINUS term
Rule 49    factor -> NUMBER
Rule 50    factor -> STRING
Rule 51    factor -> TRUE
Rule 52    factor -> FALSE
Rule 53    factor -> IDENTIFIER
Rule 54    factor -> list_expr
Rule 55    factor -> function_call
Rule 56    factor -> string_method
Rule 57    factor -> len_function
Rule 58    factor -> range_call
Rule 59    factor -> LPAREN expr RPAREN
Rule 60    list_expr -> LBRACKET expr_list RBRACKET
Rule 61    list_expr -> IDENTIFIER LBRACKET expr RBRACKET
Rule 62    expr_list -> expr
Rule 63    expr_list -> expr_list COMMA expr
Rule 64    expr_list -> empty
Rule 65    function_call -> IDENTIFIER LPAREN expr_list RPAREN
Rule 66    function_call -> IDENTIFIER LPAREN RPAREN
Rule 67    string_method -> IDENTIFIER DOT IDENTIFIER LPAREN expr_list RPAREN
Rule 68    string_method -> IDENTIFIER DOT IDENTIFIER LPAREN RPAREN
Rule 69    len_function -> LEN LPAREN expr RPAREN
Rule 70    range_call -> RANGE LPAREN expr_list RPAREN
Rule 71    range_call -> RANGE LPAREN RPAREN
Rule 72    expression -> IDENTIFIER LPAREN arg_list RPAREN
Rule 73    arg_list -> expression
Rule 74    arg_list -> arg_list COMMA expression
Rule 75    arg_list -> empty
Rule 76    empty -> <empty>

Terminals, with rules where they appear

AND                  : 44
BREAK                : 29
COLON                : 19 20 20 21 22 23 31 31
COMMA                : 25 63 74
CONTINUE             : 30
DEF                  : 23
DIVIDE               : 36
DOT                  : 67 68
ELSE                 : 20
EQ                   : 42
EQUALS               : 17 18
EXCEPT               : 31
FALSE                : 52
FOR                  : 22
GE                   : 40
GT                   : 38
IDENTIFIER           : 17 18 22 23 24 25 53 61 65 66 67 67 68 68 72
IF                   : 19 20
IN                   : 22
LBRACKET             : 18 60 61
LE                   : 41
LEN                  : 69
LPAREN               : 15 23 59 65 66 67 68 69 70 71 72
LT                   : 39
MINUS                : 34 48
MODULO               : 37
NE                   : 43
NEWLINE              : 14
NOT                  : 47
NUMBER               : 49
OR                   : 45
PLUS                 : 33
PRINT                : 15 16
RANGE                : 70 71
RBRACKET             : 18 60 61
RETURN               : 27 28
RPAREN               : 15 23 59 65 66 67 68 69 70 71 72
STRING               : 50
TIMES                : 35
TRUE                 : 51
TRY                  : 31
WHILE                : 21
error                : 

Nonterminals, with rules where they appear

arg_list             : 72 74
assign_stmt          : 5
break_stmt           : 11
continue_stmt        : 12
empty                : 26 64 75
expr                 : 15 16 17 18 18 19 20 21 22 27 33 34 35 36 37 38 39 40 41 42 43 44 45 59 61 62 63 69
expr_list            : 60 63 65 67 70
expression           : 73 74
factor               : 46
for_stmt             : 8
function_call        : 55
function_def         : 9
if_stmt              : 6
len_function         : 57
list_expr            : 54
param_list           : 23 25
print_stmt           : 4
program              : 0
range_call           : 58
return_stmt          : 10
statement            : 2 3
statements           : 1 3 19 20 20 21 22 23 31 31
string_method        : 56
term                 : 32 33 34 35 36 37 38 39 40 41 42 43 44 45 47 48
try_except_stmt      : 13
while_stmt           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . print_stmt
    (5) statement -> . assign_stmt
    (6) statement -> . if_stmt
    (7) statement -> . while_stmt
    (8) statement -> . for_stmt
    (9) statement -> . function_def
    (10) statement -> . return_stmt
    (11) statement -> . break_stmt
    (12) statement -> . continue_stmt
    (13) statement -> . try_except_stmt
    (14) statement -> . NEWLINE
    (15) print_stmt -> . PRINT LPAREN expr RPAREN
    (16) print_stmt -> . PRINT expr
    (17) assign_stmt -> . IDENTIFIER EQUALS expr
    (18) assign_stmt -> . IDENTIFIER LBRACKET expr RBRACKET EQUALS expr
    (19) if_stmt -> . IF expr COLON statements
    (20) if_stmt -> . IF expr COLON statements ELSE COLON statements
    (21) while_stmt -> . WHILE expr COLON statements
    (22) for_stmt -> . FOR IDENTIFIER IN expr COLON statements
    (23) function_def -> . DEF IDENTIFIER LPAREN param_list RPAREN COLON statements
    (27) return_stmt -> . RETURN expr
    (28) return_stmt -> . RETURN
    (29) break_stmt -> . BREAK
    (30) continue_stmt -> . CONTINUE
    (31) try_except_stmt -> . TRY COLON statements EXCEPT COLON statements

    NEWLINE         shift and go to state 14
    PRINT           shift and go to state 15
    IDENTIFIER      shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    DEF             shift and go to state 20
    RETURN          shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    TRY             shift and go to state 24

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    print_stmt                     shift and go to state 4
    assign_stmt                    shift and go to state 5
    if_stmt                        shift and go to state 6
    while_stmt                     shift and go to state 7
    for_stmt                       shift and go to state 8
    function_def                   shift and go to state 9
    return_stmt                    shift and go to state 10
    break_stmt                     shift and go to state 11
    continue_stmt                  shift and go to state 12
    try_except_stmt                shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . print_stmt
    (5) statement -> . assign_stmt
    (6) statement -> . if_stmt
    (7) statement -> . while_stmt
    (8) statement -> . for_stmt
    (9) statement -> . function_def
    (10) statement -> . return_stmt
    (11) statement -> . break_stmt
    (12) statement -> . continue_stmt
    (13) statement -> . try_except_stmt
    (14) statement -> . NEWLINE
    (15) print_stmt -> . PRINT LPAREN expr RPAREN
    (16) print_stmt -> . PRINT expr
    (17) assign_stmt -> . IDENTIFIER EQUALS expr
    (18) assign_stmt -> . IDENTIFIER LBRACKET expr RBRACKET EQUALS expr
    (19) if_stmt -> . IF expr COLON statements
    (20) if_stmt -> . IF expr COLON statements ELSE COLON statements
    (21) while_stmt -> . WHILE expr COLON statements
    (22) for_stmt -> . FOR IDENTIFIER IN expr COLON statements
    (23) function_def -> . DEF IDENTIFIER LPAREN param_list RPAREN COLON statements
    (27) return_stmt -> . RETURN expr
    (28) return_stmt -> . RETURN
    (29) break_stmt -> . BREAK
    (30) continue_stmt -> . CONTINUE
    (31) try_except_stmt -> . TRY COLON statements EXCEPT COLON statements

    $end            reduce using rule 1 (program -> statements .)
    NEWLINE         shift and go to state 14
    PRINT           shift and go to state 15
    IDENTIFIER      shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    DEF             shift and go to state 20
    RETURN          shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    TRY             shift and go to state 24

    statement                      shift and go to state 25
    print_stmt                     shift and go to state 4
    assign_stmt                    shift and go to state 5
    if_stmt                        shift and go to state 6
    while_stmt                     shift and go to state 7
    for_stmt                       shift and go to state 8
    function_def                   shift and go to state 9
    return_stmt                    shift and go to state 10
    break_stmt                     shift and go to state 11
    continue_stmt                  shift and go to state 12
    try_except_stmt                shift and go to state 13

state 3

    (2) statements -> statement .

    NEWLINE         reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    IDENTIFIER      reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    DEF             reduce using rule 2 (statements -> statement .)
    RETURN          reduce using rule 2 (statements -> statement .)
    BREAK           reduce using rule 2 (statements -> statement .)
    CONTINUE        reduce using rule 2 (statements -> statement .)
    TRY             reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    EXCEPT          reduce using rule 2 (statements -> statement .)
    ELSE            reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> print_stmt .

    NEWLINE         reduce using rule 4 (statement -> print_stmt .)
    PRINT           reduce using rule 4 (statement -> print_stmt .)
    IDENTIFIER      reduce using rule 4 (statement -> print_stmt .)
    IF              reduce using rule 4 (statement -> print_stmt .)
    WHILE           reduce using rule 4 (statement -> print_stmt .)
    FOR             reduce using rule 4 (statement -> print_stmt .)
    DEF             reduce using rule 4 (statement -> print_stmt .)
    RETURN          reduce using rule 4 (statement -> print_stmt .)
    BREAK           reduce using rule 4 (statement -> print_stmt .)
    CONTINUE        reduce using rule 4 (statement -> print_stmt .)
    TRY             reduce using rule 4 (statement -> print_stmt .)
    $end            reduce using rule 4 (statement -> print_stmt .)
    EXCEPT          reduce using rule 4 (statement -> print_stmt .)
    ELSE            reduce using rule 4 (statement -> print_stmt .)


state 5

    (5) statement -> assign_stmt .

    NEWLINE         reduce using rule 5 (statement -> assign_stmt .)
    PRINT           reduce using rule 5 (statement -> assign_stmt .)
    IDENTIFIER      reduce using rule 5 (statement -> assign_stmt .)
    IF              reduce using rule 5 (statement -> assign_stmt .)
    WHILE           reduce using rule 5 (statement -> assign_stmt .)
    FOR             reduce using rule 5 (statement -> assign_stmt .)
    DEF             reduce using rule 5 (statement -> assign_stmt .)
    RETURN          reduce using rule 5 (statement -> assign_stmt .)
    BREAK           reduce using rule 5 (statement -> assign_stmt .)
    CONTINUE        reduce using rule 5 (statement -> assign_stmt .)
    TRY             reduce using rule 5 (statement -> assign_stmt .)
    $end            reduce using rule 5 (statement -> assign_stmt .)
    EXCEPT          reduce using rule 5 (statement -> assign_stmt .)
    ELSE            reduce using rule 5 (statement -> assign_stmt .)


state 6

    (6) statement -> if_stmt .

    NEWLINE         reduce using rule 6 (statement -> if_stmt .)
    PRINT           reduce using rule 6 (statement -> if_stmt .)
    IDENTIFIER      reduce using rule 6 (statement -> if_stmt .)
    IF              reduce using rule 6 (statement -> if_stmt .)
    WHILE           reduce using rule 6 (statement -> if_stmt .)
    FOR             reduce using rule 6 (statement -> if_stmt .)
    DEF             reduce using rule 6 (statement -> if_stmt .)
    RETURN          reduce using rule 6 (statement -> if_stmt .)
    BREAK           reduce using rule 6 (statement -> if_stmt .)
    CONTINUE        reduce using rule 6 (statement -> if_stmt .)
    TRY             reduce using rule 6 (statement -> if_stmt .)
    $end            reduce using rule 6 (statement -> if_stmt .)
    EXCEPT          reduce using rule 6 (statement -> if_stmt .)
    ELSE            reduce using rule 6 (statement -> if_stmt .)


state 7

    (7) statement -> while_stmt .

    NEWLINE         reduce using rule 7 (statement -> while_stmt .)
    PRINT           reduce using rule 7 (statement -> while_stmt .)
    IDENTIFIER      reduce using rule 7 (statement -> while_stmt .)
    IF              reduce using rule 7 (statement -> while_stmt .)
    WHILE           reduce using rule 7 (statement -> while_stmt .)
    FOR             reduce using rule 7 (statement -> while_stmt .)
    DEF             reduce using rule 7 (statement -> while_stmt .)
    RETURN          reduce using rule 7 (statement -> while_stmt .)
    BREAK           reduce using rule 7 (statement -> while_stmt .)
    CONTINUE        reduce using rule 7 (statement -> while_stmt .)
    TRY             reduce using rule 7 (statement -> while_stmt .)
    $end            reduce using rule 7 (statement -> while_stmt .)
    EXCEPT          reduce using rule 7 (statement -> while_stmt .)
    ELSE            reduce using rule 7 (statement -> while_stmt .)


state 8

    (8) statement -> for_stmt .

    NEWLINE         reduce using rule 8 (statement -> for_stmt .)
    PRINT           reduce using rule 8 (statement -> for_stmt .)
    IDENTIFIER      reduce using rule 8 (statement -> for_stmt .)
    IF              reduce using rule 8 (statement -> for_stmt .)
    WHILE           reduce using rule 8 (statement -> for_stmt .)
    FOR             reduce using rule 8 (statement -> for_stmt .)
    DEF             reduce using rule 8 (statement -> for_stmt .)
    RETURN          reduce using rule 8 (statement -> for_stmt .)
    BREAK           reduce using rule 8 (statement -> for_stmt .)
    CONTINUE        reduce using rule 8 (statement -> for_stmt .)
    TRY             reduce using rule 8 (statement -> for_stmt .)
    $end            reduce using rule 8 (statement -> for_stmt .)
    EXCEPT          reduce using rule 8 (statement -> for_stmt .)
    ELSE            reduce using rule 8 (statement -> for_stmt .)


state 9

    (9) statement -> function_def .

    NEWLINE         reduce using rule 9 (statement -> function_def .)
    PRINT           reduce using rule 9 (statement -> function_def .)
    IDENTIFIER      reduce using rule 9 (statement -> function_def .)
    IF              reduce using rule 9 (statement -> function_def .)
    WHILE           reduce using rule 9 (statement -> function_def .)
    FOR             reduce using rule 9 (statement -> function_def .)
    DEF             reduce using rule 9 (statement -> function_def .)
    RETURN          reduce using rule 9 (statement -> function_def .)
    BREAK           reduce using rule 9 (statement -> function_def .)
    CONTINUE        reduce using rule 9 (statement -> function_def .)
    TRY             reduce using rule 9 (statement -> function_def .)
    $end            reduce using rule 9 (statement -> function_def .)
    EXCEPT          reduce using rule 9 (statement -> function_def .)
    ELSE            reduce using rule 9 (statement -> function_def .)


state 10

    (10) statement -> return_stmt .

    NEWLINE         reduce using rule 10 (statement -> return_stmt .)
    PRINT           reduce using rule 10 (statement -> return_stmt .)
    IDENTIFIER      reduce using rule 10 (statement -> return_stmt .)
    IF              reduce using rule 10 (statement -> return_stmt .)
    WHILE           reduce using rule 10 (statement -> return_stmt .)
    FOR             reduce using rule 10 (statement -> return_stmt .)
    DEF             reduce using rule 10 (statement -> return_stmt .)
    RETURN          reduce using rule 10 (statement -> return_stmt .)
    BREAK           reduce using rule 10 (statement -> return_stmt .)
    CONTINUE        reduce using rule 10 (statement -> return_stmt .)
    TRY             reduce using rule 10 (statement -> return_stmt .)
    $end            reduce using rule 10 (statement -> return_stmt .)
    EXCEPT          reduce using rule 10 (statement -> return_stmt .)
    ELSE            reduce using rule 10 (statement -> return_stmt .)


state 11

    (11) statement -> break_stmt .

    NEWLINE         reduce using rule 11 (statement -> break_stmt .)
    PRINT           reduce using rule 11 (statement -> break_stmt .)
    IDENTIFIER      reduce using rule 11 (statement -> break_stmt .)
    IF              reduce using rule 11 (statement -> break_stmt .)
    WHILE           reduce using rule 11 (statement -> break_stmt .)
    FOR             reduce using rule 11 (statement -> break_stmt .)
    DEF             reduce using rule 11 (statement -> break_stmt .)
    RETURN          reduce using rule 11 (statement -> break_stmt .)
    BREAK           reduce using rule 11 (statement -> break_stmt .)
    CONTINUE        reduce using rule 11 (statement -> break_stmt .)
    TRY             reduce using rule 11 (statement -> break_stmt .)
    $end            reduce using rule 11 (statement -> break_stmt .)
    EXCEPT          reduce using rule 11 (statement -> break_stmt .)
    ELSE            reduce using rule 11 (statement -> break_stmt .)


state 12

    (12) statement -> continue_stmt .

    NEWLINE         reduce using rule 12 (statement -> continue_stmt .)
    PRINT           reduce using rule 12 (statement -> continue_stmt .)
    IDENTIFIER      reduce using rule 12 (statement -> continue_stmt .)
    IF              reduce using rule 12 (statement -> continue_stmt .)
    WHILE           reduce using rule 12 (statement -> continue_stmt .)
    FOR             reduce using rule 12 (statement -> continue_stmt .)
    DEF             reduce using rule 12 (statement -> continue_stmt .)
    RETURN          reduce using rule 12 (statement -> continue_stmt .)
    BREAK           reduce using rule 12 (statement -> continue_stmt .)
    CONTINUE        reduce using rule 12 (statement -> continue_stmt .)
    TRY             reduce using rule 12 (statement -> continue_stmt .)
    $end            reduce using rule 12 (statement -> continue_stmt .)
    EXCEPT          reduce using rule 12 (statement -> continue_stmt .)
    ELSE            reduce using rule 12 (statement -> continue_stmt .)


state 13

    (13) statement -> try_except_stmt .

    NEWLINE         reduce using rule 13 (statement -> try_except_stmt .)
    PRINT           reduce using rule 13 (statement -> try_except_stmt .)
    IDENTIFIER      reduce using rule 13 (statement -> try_except_stmt .)
    IF              reduce using rule 13 (statement -> try_except_stmt .)
    WHILE           reduce using rule 13 (statement -> try_except_stmt .)
    FOR             reduce using rule 13 (statement -> try_except_stmt .)
    DEF             reduce using rule 13 (statement -> try_except_stmt .)
    RETURN          reduce using rule 13 (statement -> try_except_stmt .)
    BREAK           reduce using rule 13 (statement -> try_except_stmt .)
    CONTINUE        reduce using rule 13 (statement -> try_except_stmt .)
    TRY             reduce using rule 13 (statement -> try_except_stmt .)
    $end            reduce using rule 13 (statement -> try_except_stmt .)
    EXCEPT          reduce using rule 13 (statement -> try_except_stmt .)
    ELSE            reduce using rule 13 (statement -> try_except_stmt .)


state 14

    (14) statement -> NEWLINE .

    NEWLINE         reduce using rule 14 (statement -> NEWLINE .)
    PRINT           reduce using rule 14 (statement -> NEWLINE .)
    IDENTIFIER      reduce using rule 14 (statement -> NEWLINE .)
    IF              reduce using rule 14 (statement -> NEWLINE .)
    WHILE           reduce using rule 14 (statement -> NEWLINE .)
    FOR             reduce using rule 14 (statement -> NEWLINE .)
    DEF             reduce using rule 14 (statement -> NEWLINE .)
    RETURN          reduce using rule 14 (statement -> NEWLINE .)
    BREAK           reduce using rule 14 (statement -> NEWLINE .)
    CONTINUE        reduce using rule 14 (statement -> NEWLINE .)
    TRY             reduce using rule 14 (statement -> NEWLINE .)
    $end            reduce using rule 14 (statement -> NEWLINE .)
    EXCEPT          reduce using rule 14 (statement -> NEWLINE .)
    ELSE            reduce using rule 14 (statement -> NEWLINE .)


state 15

    (15) print_stmt -> PRINT . LPAREN expr RPAREN
    (16) print_stmt -> PRINT . expr
    (32) expr -> . term
    (33) expr -> . expr PLUS term
    (34) expr -> . expr MINUS term
    (35) expr -> . expr TIMES term
    (36) expr -> . expr DIVIDE term
    (37) expr -> . expr MODULO term
    (38) expr -> . expr GT term
    (39) expr -> . expr LT term
    (40) expr -> . expr GE term
    (41) expr -> . expr LE term
    (42) expr -> . expr EQ term
    (43) expr -> . expr NE term
    (44) expr -> . expr AND term
    (45) expr -> . expr OR term
    (46) term -> . factor
    (47) term -> . NOT term
    (48) term -> . MINUS term
    (49) factor -> . NUMBER
    (50) factor -> . STRING
    (51) factor -> . TRUE
    (52) factor -> . FALSE
    (53) factor -> . IDENTIFIER
    (54) factor -> . list_expr
    (55) factor -> . function_call
    (56) factor -> . string_method
    (57) factor -> . len_function
    (58) factor -> . range_call
    (59) factor -> . LPAREN expr RPAREN
    (60) list_expr -> . LBRACKET expr_list RBRACKET
    (61) list_expr -> . IDENTIFIER LBRACKET expr RBRACKET
    (65) function_call -> . IDENTIFIER LPAREN expr_list RPAREN
    (66) function_call -> . IDENTIFIER LPAREN RPAREN
    (67) string_method -> . IDENTIFIER DOT IDENTIFIER LPAREN expr_list RPAREN
    (68) string_method -> . IDENTIFIER DOT IDENTIFIER LPAREN RPAREN
    (69) len_function -> . LEN LPAREN expr RPAREN
    (70) range_call -> . RANGE LPAREN expr_list RPAREN
    (71) range_call -> . RANGE LPAREN RPAREN

    LPAREN          shift and go to state 26
    NOT             shift and go to state 31
    MINUS           shift and go to state 29
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    IDENTIFIER      shift and go to state 36
    LBRACKET        shift and go to state 42
    LEN             shift and go to state 43
    RANGE           shift and go to state 44

    expr                           shift and go to state 27
    term                           shift and go to state 28
    factor                         shift and go to state 30
    list_expr                      shift and go to state 37
    function_call                  shift and go to state 38
    string_method                  shift and go to state 39
    len_function                   shift and go to state 40
    range_call                     shift and go to state 41

state 16

    (17) assign_stmt -> IDENTIFIER . EQUALS expr
    (18) assign_stmt -> IDENTIFIER . LBRACKET expr RBRACKET EQUALS expr

    EQUALS          shift and go to state 45
    LBRACKET        shift and go to state 46


state 17

    (19) if_stmt -> IF . expr COLON statements
    (20) if_stmt -> IF . expr COLON statements ELSE COLON statements
    (32) expr -> . term
    (33) expr -> . expr PLUS term
    (34) expr -> . expr MINUS term
    (35) expr -> . expr TIMES term
    (36) expr -> . expr DIVIDE term
    (37) expr -> . expr MODULO term
    (38) expr -> . expr GT term
    (39) expr -> . expr LT term
    (40) expr -> . expr GE term
    (41) expr -> . expr LE term
    (42) expr -> . expr EQ term
    (43) expr -> . expr NE term
    (44) expr -> . expr AND term
    (45) expr -> . expr OR term
    (46) term -> . factor
    (47) term -> . NOT term
    (48) term -> . MINUS term
    (49) factor -> . NUMBER
    (50) factor -> . STRING
    (51) factor -> . TRUE
    (52) factor -> . FALSE
    (53) factor -> . IDENTIFIER
    (54) factor -> . list_expr
    (55) factor -> . function_call
    (56) factor -> . string_method
    (57) factor -> . len_function
    (58) factor -> . range_call
    (59) factor -> . LPAREN expr RPAREN
